feat(docker-compose): 📦️ configure docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     volumes:
       - mongo_data:/data/db
 
+  autodist-app:
+    build: .
+    ports:
+      - '3000:3000'
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - mongo
 volumes:
   mongo_data:
     driver: local
